--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_labels.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_labels.yml
@@ -1,15 +1,18 @@
 # Labels
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     name: idempotency
     state: absent
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: started
     command: 1h
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -21,6 +24,7 @@
     that: test1 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -35,6 +39,7 @@
     that: test2 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -46,6 +51,7 @@
     that: test3 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -62,6 +68,7 @@
     that: test4 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -78,6 +85,7 @@
     that: test5 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -89,6 +97,7 @@
     that: test6 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -102,6 +111,7 @@
     that: test7 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -116,6 +126,7 @@
     that: test8 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -127,16 +138,19 @@
     that: test9 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     name: idempotency1
     state: absent
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
     command: sleep 1h
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
@@ -148,6 +162,7 @@
     that: test10 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
@@ -161,6 +176,7 @@
     that: test11 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
@@ -172,6 +188,7 @@
     that: test12 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
