--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_stopsignal.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_stopsignal.yml
@@ -1,15 +1,18 @@
 # Stop signal
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     name: idempotency
     state: absent
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: started
     command: 1h
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -21,6 +24,7 @@
     that: test1 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -33,6 +37,7 @@
     that: test2 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -44,6 +49,7 @@
     that: test3 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -56,6 +62,7 @@
     that: test4 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -68,6 +75,7 @@
     that: test5 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -79,6 +87,7 @@
     that: test6 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -91,6 +100,7 @@
     that: test7 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -103,6 +113,7 @@
     that: test8 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -114,6 +125,7 @@
     that: test9 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -126,6 +138,7 @@
     that: test9a is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -137,16 +150,19 @@
     that: test9b is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     name: idempotency1
     state: absent
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
     command: sleep 1h
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
@@ -158,6 +174,7 @@
     that: test10 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
@@ -170,6 +187,7 @@
     that: test11 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
@@ -182,6 +200,7 @@
     that: test12 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
@@ -193,6 +212,7 @@
     that: test13 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
