--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_volumes.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_volumes.yml
@@ -1,15 +1,18 @@
 # Volumes
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     name: idempotency
     state: absent
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: started
     command: 1h
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -21,6 +24,7 @@
     that: test1 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -32,6 +36,7 @@
     that: test2 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -43,6 +48,7 @@
     that: test3 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -56,6 +62,7 @@
     that: test4 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -69,6 +76,7 @@
     that: test5 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -80,6 +88,7 @@
     that: test6 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -94,6 +103,7 @@
     that: test7 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -107,6 +117,7 @@
     that: test8 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -123,6 +134,7 @@
     podman volume inspect local_volume2 || podman volume create local_volume2
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -137,6 +149,7 @@
     that: test10 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -151,6 +164,7 @@
     that: test11 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -165,6 +179,7 @@
     that: test12 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: "{{ idem_image }}"
     name: idempotency
     state: present
@@ -178,16 +193,19 @@
     that: test13 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     name: idempotency1
     state: absent
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
     command: sleep 1h
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
@@ -199,6 +217,7 @@
     that: test14 is not changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
@@ -212,6 +231,7 @@
     that: test15 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
@@ -223,6 +243,7 @@
     that: test16 is changed
 
 - containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     image: alpine
     name: idempotency1
     state: present
