--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_networks.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_networks.yml
@@ -1,10 +1,12 @@
 - name: Remove container netcontainer
   containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     name: netcontainer
     state: absent
 
 - name: Run container with {{ item.first_net }}
   containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     name: netcontainer
     image: "{{ idem_image }}"
     command: 1h
@@ -13,6 +15,7 @@
 
 - name: Run container again with {{ item.first_net }}
   containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     name: netcontainer
     image: "{{ idem_image }}"
     command: 1h
@@ -27,6 +30,7 @@
 
 - name: Run changed container with {{ item.next_net }}
   containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
     name: netcontainer
     image: "{{ idem_image }}"
     command: 1h
