--- a/tests/integration/targets/podman_containers/tasks/root-multi.yml
+++ b/tests/integration/targets/podman_containers/tasks/root-multi.yml
@@ -94,6 +94,7 @@
 
     - name: Delete all containers leftovers from tests
       containers.podman.podman_container:
+        executable: "{{ test_executable | default('podman') }}"
         name: "{{ item }}"
         state: absent
       loop:
